fix bug on safari

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,7 +20,6 @@ html, body {
   .title {
     align-items: end;
     font-size: 1rem;
-    min-height: 50px;
     margin-top: -10px;
   }
 
